# word-count

./: Dockerfile  README.md  pyproject.toml  test_wordfreq.py  wordfreq.py
