[tool.poetry]
name = "word-count"
version = "0.1.0"
description = "A command-line tool for counting word frequencies without built-in dictionaries"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 